--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+
     package="longqing.xfly">
 
     <!-- DJI SDK need permission -->
@@ -79,7 +80,9 @@
             -->
         </activity>
 
-        <activity android:name=".MapViewActivity" />
+        <activity
+            android:name=".MapViewActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
 
         <activity
             android:name=".WaypointActivity"
