add some function

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,12 +43,12 @@
 
         <meta-data
             android:name="com.dji.sdk.API_KEY"
-            android:value="DJI_SDK_KEY" />
+            android:value="4610b9fe4765a9b38b355548" />
 
         <!-- 启用高德地图服务 -->
         <meta-data
             android:name="com.amap.api.v2.apikey"
-            android:value="GaodeMap_SDK_KEY" />
+            android:value="02749c8c97f79aeea10a4bcf62362c17" />
 
         <activity
             android:name="dji.sdk.sdkmanager.DJIAoaControllerActivity"
